--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
        <button><a href="day3/range.py">Day3</a></button><br><br>
        <button><a href="day4/day4.html">Day4</a></button> 
        <button><a href="day5/current.py">Day5</a></button> 
-       <button><a href="day6/index.html">Day6</a></button> </center>
+       <button><a href="day6/index.html">Day6</a></button>
+       <button><a href="day7/index.html">Day7</a></button> </center>
 
 </body>
 </html>
