--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
        <button><a href="day4/day4.html">Day4</a></button> 
        <button><a href="day5/current.py">Day5</a></button> 
        <button><a href="day6/index.html">Day6</a></button>
-       <button><a href="day7/index.html">Day7</a></button> </center>
+                                                            </center>
 
 </body>
 </html>
