--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
        <button><a href="day4/day4.html">Day4</a></button> 
        <button><a href="day5/current.py">Day5</a></button> 
        <button><a href="day6/index.html">Day6</a></button>
+       <button><a href="day7/index.py">Day7</a></button>
+       <button><a href="day8/time.py">Day8</a></button>
+       <button><a href="day9/biometric.py">Day9</a></button>
+       <button><a href="day10/bubble.py">Day10</a></button>
+       <button><a href="day11/digit.py">Day11</a></button>
                                                             </center>
 
 </body>
