--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
        <button><a href="day9/biometric.py">Day9</a></button>
        <button><a href="day10/bubble.py">Day10</a></button>
        <button><a href="day11/digit.py">Day11</a></button>
+       <button><a href="day12/dictionary.py">Day12</a></button>
                                                             </center>
 
 </body>
