--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
        <button><a href="day10/bubble.py">Day10</a></button>
        <button><a href="day11/digit.py">Day11</a></button>
        <button><a href="day12/dictionary.py">Day12</a></button>
+       <button><a href="day13/palindrome.py">Day13</a></button>
+       <button><a href="day14/diamond.py">Day14</a></button>
+       <button><a href="day15/polymorphism.py">day15</a></button>
                                                             </center>
 
 </body>
